fixed some issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,7 +52,7 @@
   --color-secondary: #171b24;
   --color-light: #6c7293;
   --color-dark: #000000;
-
+  --color-footer:#0e1116
   --color-secondary-dark-color: #11141b;
   --color-gold-color: #f5c59f;
 }
