--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,13 +48,16 @@
 }
 
 @theme {
-  --color-primary: #eb1616;
+  --color-primary: #1beaa5;
   --color-secondary: #171b24;
   --color-light: #6c7293;
   --color-dark: #000000;
   --color-footer:#0e1116
   --color-secondary-dark-color: #11141b;
   --color-gold-color: #f5c59f;
+  --color-darkest-gray-color: #2a2c31;
+  --color-gray-color: #979ba2;
+  --color-green-color:#28a745
 }
 * {
   font-family: "Quicksand", sans-serif;
@@ -63,6 +66,7 @@
 body {
   font-family: "Quicksand", sans-serif;
   background-color: var(--secondary-dark-color);
+  width: 100%;
 }
 button {
   cursor: pointer;
